GTK4/package/GTK/gtktypebuiltins.inc

/////////////////////////////////////////////////////////////
//                                                         //
//   WARNUNG, dies Datei wird automatisch durch            //
//   das Program "Convert_Unit_to_pas_includes" erzeugt !  //
//   Erzeugt am: 05-08-2024   15:41                        //
//                                                         //
/////////////////////////////////////////////////////////////

{$IFDEF read_interface}


{ enumerations from "gtkassistant.h"  }
function gtk_assistant_page_type_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_ASSISTANT_PAGE_TYPE: TGType;

{ enumerations from "gtkcellrenderer.h"  }
function gtk_cell_renderer_state_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_CELL_RENDERER_STATE: TGType;

function gtk_cell_renderer_mode_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_CELL_RENDERER_MODE: TGType;

{ enumerations from "gtkcellrendereraccel.h"  }
function gtk_cell_renderer_accel_mode_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_CELL_RENDERER_ACCEL_MODE: TGType;

{ enumerations from "gtkdialog.h"  }
function gtk_dialog_flags_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_DIALOG_FLAGS: TGType;

function gtk_response_type_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_RESPONSE_TYPE: TGType;

{ enumerations from "gtkfilechooser.h"  }
function gtk_file_chooser_action_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_FILE_CHOOSER_ACTION: TGType;

function gtk_file_chooser_error_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_FILE_CHOOSER_ERROR: TGType;

{ enumerations from "gtkfontchooser.h"  }
function gtk_font_chooser_level_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_FONT_CHOOSER_LEVEL: TGType;

{ enumerations from "gtkiconview.h"  }
function gtk_icon_view_drop_position_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_ICON_VIEW_DROP_POSITION: TGType;

{ enumerations from "gtkmessagedialog.h"  }
function gtk_buttons_type_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_BUTTONS_TYPE: TGType;

{ enumerations from "gtkstylecontext.h"  }
function gtk_style_context_print_flags_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_STYLE_CONTEXT_PRINT_FLAGS: TGType;

{ enumerations from "gtktreemodel.h"  }
function gtk_tree_model_flags_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_TREE_MODEL_FLAGS: TGType;

{ enumerations from "gtktreeview.h"  }
function gtk_tree_view_drop_position_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_TREE_VIEW_DROP_POSITION: TGType;

{ enumerations from "gtktreeviewcolumn.h"  }
function gtk_tree_view_column_sizing_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_TREE_VIEW_COLUMN_SIZING: TGType;

{ enumerations from "gtkaboutdialog.h"  }
function gtk_license_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_LICENSE: TGType;

{ enumerations from "gtkaccessible.h"  }
function gtk_accessible_platform_state_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_ACCESSIBLE_PLATFORM_STATE: TGType;

{ enumerations from "gtkaccessibletext.h"  }
function gtk_accessible_text_granularity_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_ACCESSIBLE_TEXT_GRANULARITY: TGType;

function gtk_accessible_text_content_change_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_ACCESSIBLE_TEXT_CONTENT_CHANGE: TGType;

{ enumerations from "gtkapplication.h"  }
function gtk_application_inhibit_flags_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_APPLICATION_INHIBIT_FLAGS: TGType;

{ enumerations from "gtkbuilder.h"  }
function gtk_builder_error_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_BUILDER_ERROR: TGType;

{ enumerations from "gtkbuilderscope.h"  }
function gtk_builder_closure_flags_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_BUILDER_CLOSURE_FLAGS: TGType;

{ enumerations from "gtkdebug.h"  }
function gtk_debug_flags_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_DEBUG_FLAGS: TGType;

{ enumerations from "gtkdialogerror.h"  }
function gtk_dialog_error_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_DIALOG_ERROR: TGType;

{ enumerations from "gtkeditable.h"  }
function gtk_editable_properties_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_EDITABLE_PROPERTIES: TGType;

{ enumerations from "gtkentry.h"  }
function gtk_entry_icon_position_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_ENTRY_ICON_POSITION: TGType;

{ enumerations from "gtkenums.h"  }
function gtk_align_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_ALIGN: TGType;

function gtk_arrow_type_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_ARROW_TYPE: TGType;

function gtk_baseline_position_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_BASELINE_POSITION: TGType;

function gtk_content_fit_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_CONTENT_FIT: TGType;

function gtk_delete_type_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_DELETE_TYPE: TGType;

function gtk_direction_type_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_DIRECTION_TYPE: TGType;

function gtk_icon_size_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_ICON_SIZE: TGType;

function gtk_sensitivity_type_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_SENSITIVITY_TYPE: TGType;

function gtk_text_direction_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_TEXT_DIRECTION: TGType;

function gtk_justification_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_JUSTIFICATION: TGType;

function gtk_list_tab_behavior_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_LIST_TAB_BEHAVIOR: TGType;

function gtk_list_scroll_flags_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_LIST_SCROLL_FLAGS: TGType;

function gtk_message_type_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_MESSAGE_TYPE: TGType;

function gtk_movement_step_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_MOVEMENT_STEP: TGType;

function gtk_natural_wrap_mode_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_NATURAL_WRAP_MODE: TGType;

function gtk_scroll_step_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_SCROLL_STEP: TGType;

function gtk_orientation_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_ORIENTATION: TGType;

function gtk_overflow_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_OVERFLOW: TGType;

function gtk_pack_type_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_PACK_TYPE: TGType;

function gtk_position_type_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_POSITION_TYPE: TGType;

function gtk_scroll_type_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_SCROLL_TYPE: TGType;

function gtk_selection_mode_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_SELECTION_MODE: TGType;

function gtk_wrap_mode_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_WRAP_MODE: TGType;

function gtk_sort_type_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_SORT_TYPE: TGType;

function gtk_print_pages_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_PRINT_PAGES: TGType;

function gtk_page_set_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_PAGE_SET: TGType;

function gtk_number_up_layout_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_NUMBER_UP_LAYOUT: TGType;

function gtk_ordering_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_ORDERING: TGType;

function gtk_page_orientation_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_PAGE_ORIENTATION: TGType;

function gtk_print_quality_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_PRINT_QUALITY: TGType;

function gtk_print_duplex_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_PRINT_DUPLEX: TGType;

function gtk_unit_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_UNIT: TGType;

function gtk_tree_view_grid_lines_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_TREE_VIEW_GRID_LINES: TGType;

function gtk_size_group_mode_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_SIZE_GROUP_MODE: TGType;

function gtk_size_request_mode_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_SIZE_REQUEST_MODE: TGType;

function gtk_scrollable_policy_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_SCROLLABLE_POLICY: TGType;

function gtk_state_flags_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_STATE_FLAGS: TGType;

function gtk_border_style_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_BORDER_STYLE: TGType;

function gtk_level_bar_mode_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_LEVEL_BAR_MODE: TGType;

function gtk_input_purpose_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_INPUT_PURPOSE: TGType;

function gtk_input_hints_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_INPUT_HINTS: TGType;

function gtk_propagation_phase_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_PROPAGATION_PHASE: TGType;

function gtk_propagation_limit_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_PROPAGATION_LIMIT: TGType;

function gtk_event_sequence_state_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_EVENT_SEQUENCE_STATE: TGType;

function gtk_pan_direction_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_PAN_DIRECTION: TGType;

function gtk_shortcut_scope_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_SHORTCUT_SCOPE: TGType;

function gtk_pick_flags_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_PICK_FLAGS: TGType;

function gtk_constraint_relation_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_CONSTRAINT_RELATION: TGType;

function gtk_constraint_strength_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_CONSTRAINT_STRENGTH: TGType;

function gtk_constraint_attribute_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_CONSTRAINT_ATTRIBUTE: TGType;

function gtk_constraint_vfl_parser_error_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_CONSTRAINT_VFL_PARSER_ERROR: TGType;

function gtk_system_setting_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_SYSTEM_SETTING: TGType;

function gtk_symbolic_color_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_SYMBOLIC_COLOR: TGType;

function gtk_accessible_role_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_ACCESSIBLE_ROLE: TGType;

function gtk_accessible_state_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_ACCESSIBLE_STATE: TGType;

function gtk_accessible_property_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_ACCESSIBLE_PROPERTY: TGType;

function gtk_accessible_relation_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_ACCESSIBLE_RELATION: TGType;

function gtk_accessible_tristate_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_ACCESSIBLE_TRISTATE: TGType;

function gtk_accessible_invalid_state_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_ACCESSIBLE_INVALID_STATE: TGType;

function gtk_accessible_autocomplete_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_ACCESSIBLE_AUTOCOMPLETE: TGType;

function gtk_accessible_sort_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_ACCESSIBLE_SORT: TGType;

function gtk_accessible_announcement_priority_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_ACCESSIBLE_ANNOUNCEMENT_PRIORITY: TGType;

function gtk_popover_menu_flags_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_POPOVER_MENU_FLAGS: TGType;

{ enumerations from "gtkeventcontrollerscroll.h"  }
function gtk_event_controller_scroll_flags_get_type: TGType; cdecl; external gtklib;
function GTK_TYPE_EVENT_CONTROLLER_SCROLL_FLAGS: TGType;
